{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 64,
  "lineage": "3d79d47b-2627-0592-2283-1a10967336b5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Git_EIP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0eb43b1b5014fcfb5",
            "domain": "vpc",
            "id": "eipalloc-090db66e2d235e5f2",
            "instance": "i-0615ec0a9a507b7c5",
            "network_interface": "eni-089bf48fd1af0407f",
            "private_dns": "ip-172-16-1-96.eu-west-1.compute.internal",
            "private_ip": "172.16.1.96",
            "public_dns": "ec2-52-19-75-233.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.75.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.GitServer",
            "aws_internet_gateway.Git_IGW"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "GitServer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c143cb48fa7c1ec9",
            "arn": "arn:aws:ec2:eu-west-1:940881489336:instance/i-0615ec0a9a507b7c5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0615ec0a9a507b7c5",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "sqlireland",
            "monitoring": false,
            "primary_network_interface_id": "eni-089bf48fd1af0407f",
            "private_dns": "ip-172-16-1-96.eu-west-1.compute.internal",
            "private_ip": "172.16.1.96",
            "public_ip": "34.244.218.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-070904cd1845754a5",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01aca0221c2c4ffb8",
            "tags": {
              "Name": "GitServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090a42ff736fd23a3"
            ]
          },
          "depends_on": [
            "aws_security_group.Git_SecurityGroup",
            "aws_subnet.GitSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Git_IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b4a694fc0321ea13",
            "owner_id": "940881489336",
            "tags": {
              "Name": "Git_IGW"
            },
            "vpc_id": "vpc-00fd437c59edecf7f"
          },
          "depends_on": [
            "aws_vpc.GitVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT_Git",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03575798e93ba92d5",
            "owner_id": "940881489336",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4a694fc0321ea13",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT_Git"
            },
            "vpc_id": "vpc-00fd437c59edecf7f"
          },
          "depends_on": [
            "aws_internet_gateway.Git_IGW",
            "aws_vpc.GitVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnet_Association_Git",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0720ec725804f7100",
            "route_table_id": "rtb-03575798e93ba92d5",
            "subnet_id": "subnet-01aca0221c2c4ffb8"
          },
          "depends_on": [
            "aws_route_table.Public_RT_Git",
            "aws_subnet.GitSubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Git_SecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940881489336:security-group/sg-090a42ff736fd23a3",
            "description": "Allow incoming connections from Internet and RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090a42ff736fd23a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "14.98.201.90/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "GitVPC",
            "name_prefix": null,
            "owner_id": "940881489336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GitVPCSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd437c59edecf7f"
          },
          "depends_on": [
            "aws_vpc.GitVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "GitSubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940881489336:subnet/subnet-01aca0221c2c4ffb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-01aca0221c2c4ffb8",
            "map_public_ip_on_launch": true,
            "owner_id": "940881489336",
            "tags": {
              "Name": "GitSubnet"
            },
            "vpc_id": "vpc-00fd437c59edecf7f"
          },
          "depends_on": [
            "aws_vpc.GitVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "GitVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940881489336:vpc/vpc-00fd437c59edecf7f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ea51c0a11eadf97a",
            "default_route_table_id": "rtb-0738a4b344f1f8612",
            "default_security_group_id": "sg-077f92bff8e2e29aa",
            "dhcp_options_id": "dopt-0ebe2668",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00fd437c59edecf7f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0738a4b344f1f8612",
            "owner_id": "940881489336",
            "tags": {
              "Name": "GitVPC"
            }
          }
        }
      ]
    }
  ]
}